# librda

./: .build.yml  ChangeLog  Makefile.am  NEWS  configure.ac  update-po.sh  update-pot.sh
data/: Makefile.am  rdacheck.1
debian/: changelog  control  copyright  librda-dev.install  librda0.install  librda0.symbols  rules  watch
debian/upstream/: signing-key.asc
po/: POTFILES.in  af.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  frp.po  (+79 more)
src/: Makefile.am  rda.c  rda.h  rda.pc.in  rda_ogon.c  rda_ogon.h  rda_protocol.c  rda_protocol.h  rda_supported_technologies.h.in  rda_util.c  rda_util.h  rda_x2go.c  rda_x2go.h
tests/: Makefile.am  test-x2go.c
util/: Makefile.am  rdacheck.c
